--- a/package.json
+++ b/package.json
@@ -9,6 +9,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "inquirer": "^6.3.1"
-  }
+    "fs": "0.0.1-security",
+    "inquirer": "^6.5.2"
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/dagreatcode/Super-Readme-Gen.git"
+  },
+  "keywords": [],
+  "bugs": {
+    "url": "https://github.com/dagreatcode/Super-Readme-Gen/issues"
+  },
+  "homepage": "https://github.com/dagreatcode/Super-Readme-Gen#readme"
 }
