--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "fs": "0.0.1-security",
-    "inquirer": "^6.5.2"
+    "inquirer": "^6.5.2",
+    "utils": "^0.3.1"
   },
   "devDependencies": {},
   "repository": {
